# AgentFlow

./: .env.example  .gitignore  Dockerfile  README.md  app.py  app2.py  app3.py  app_streaming.py  docker-compose.yml  main.py  pyproject.toml
agent-1-research/src/: state.py
docs/: sample_data.csv
evaluation/: dataset.py  judge.py  run_eval.py
src/agent1_research/: graph.py  nodes.py  state.py
src/agent2_analyst/: graph.py  nodes.py  state.py
src/agent3_orchestrator/: graph.py  nodes.py  state.py
src/shared/: error_handler.py  observability.py
tests/: test_agent1.py  test_agent2.py  test_agent3.py
