[project]
name = "agentflow"
version = "0.1.0"
description = "AI Agents portfolio with LangGraph"
requires-python = ">=3.10"

[project.optional-dependencies]
agent1 = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-groq>=0.2.0",
    "duckduckgo-search>=6.0.0",
    "ddgs>=0.1.0",
    "gradio>=4.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]
dev = [
    "pytest>=9.0.0",
    "pytest-mock>=3.0.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
